fix: Change to remote hub

--- a/onlineboutique/src/federationservice/Dockerfile-BE
+++ b/onlineboutique/src/federationservice/Dockerfile-BE
@@ -12,5 +12,7 @@ ENV PUBLIC_IP=$PUBLIC_IP
 
 ENV FEDERATION_SERVER="http://34.159.243.99/"
 ENV AUTH_SERVER="http://34.159.243.99/auth/"
+ENV VITE_FEDERATION_SERVICE="http://$PUBLIC_IP:8091"
+
 
 ENTRYPOINT ["go", "run", "shop.go", "8091", "shop", "dasdasd"]
