--- a/socks-shop/skaffold.yaml
+++ b/socks-shop/skaffold.yaml
@@ -16,6 +16,22 @@ build:
     context: newfederationservice
     docker:
       dockerfile: Dockerfile
+  - image: federationservice-ui
+    context: src/federationservice
+    docker:
+      dockerfile: Dockerfile-UI
+      buildArgs:
+        PUBLIC_IP: "34.79.149.251"
+  - image: federationservice-be
+    context: src/federationservice
+    docker:
+      dockerfile: Dockerfile-BE
+      buildArgs:
+        PUBLIC_IP: "34.79.149.251"
+  - image: federationservice-db
+    context: src/federationservice
+    docker: 
+      dockerfile: Dockerfile-DB
   tagPolicy:
     gitCommit: {}
   local:
