--- a/onlineboutique/src/federationservice/Dockerfile-UI
+++ b/onlineboutique/src/federationservice/Dockerfile-UI
@@ -10,7 +10,7 @@ ENV PUBLIC_IP=$PUBLIC_IP
 #ENV FEDERATION_SERVER=http://$PUBLIC_IP:5433
 ENV FEDERATION_SERVER="http://34.159.243.99/"
 #ENV AUTH_SERVER="http://$PUBLIC_IP:8463"
-ENV AUTH_SERVER="http://34.159.243.99/auth/"
+ENV AUTH_SERVER="http://34.159.243.99/auth"
 ENV VITE_FEDERATION_SERVICE="http://$PUBLIC_IP:8091"
 
 CMD [ "npm","run","dev" ] 
