--- a/socks-shop/federationservice/Dockerfile-BE
+++ b/socks-shop/federationservice/Dockerfile-BE
@@ -10,8 +10,8 @@ ENV PUBLIC_IP=$PUBLIC_IP
 #ENV FEDERATION_SERVER="http://$PUBLIC_IP:5433"
 #ENV AUTH_SERVER="http://$PUBLIC_IP:8463"
 
-ENV FEDERATION_SERVER="http://34.159.243.99/"
-ENV AUTH_SERVER="http://34.159.243.99/auth/"
+ENV FEDERATION_SERVER="http://34.159.243.99"
+ENV AUTH_SERVER="http://34.159.243.99/auth"
 ENV VITE_FEDERATION_SERVICE="http://$PUBLIC_IP:8093"
 
 
