--- a/socks-shop/federationservice/Dockerfile-UI
+++ b/socks-shop/federationservice/Dockerfile-UI
@@ -8,9 +8,9 @@ EXPOSE 5174
 ARG PUBLIC_IP
 ENV PUBLIC_IP=$PUBLIC_IP
 #ENV FEDERATION_SERVER=http://$PUBLIC_IP:5433
-ENV FEDERATION_SERVER="http://34.159.243.99/"
+ENV FEDERATION_SERVER="http://34.159.243.99"
 #ENV AUTH_SERVER="http://$PUBLIC_IP:8463"
-ENV AUTH_SERVER="http://34.159.243.99/auth/"
+ENV AUTH_SERVER="http://34.159.243.99/auth"
 ENV VITE_FEDERATION_SERVICE="http://$PUBLIC_IP:8093"
 
 CMD [ "npm","run","dev","--","--port","5174"] 
