--- a/socks-shop/federationservice/Dockerfile-DB
+++ b/socks-shop/federationservice/Dockerfile-DB
@@ -7,3 +7,6 @@ ENV POSTGRES_DB federation_service
 
 # Copy initialization scripts to docker-entrypoint-initdb.d
 COPY init.sql /docker-entrypoint-initdb.d/
+
+# Expose the desired port
+EXPOSE 5433
