feat: Updating api paths and temporarly removing hub from build

--- a/onlineboutique/kubernetes-manifests/kustomization.yaml
+++ b/onlineboutique/kubernetes-manifests/kustomization.yaml
@@ -28,9 +28,9 @@ resources:
  - redis.yaml
  - shippingservice.yaml
  - apiservice.yaml
- - federationservice-be.yaml
- - federationservice-db.yaml
- - federationservice-ui.yaml
+#  - federationservice-be.yaml
+#  - federationservice-db.yaml
+#  - federationservice-ui.yaml
 
 # components:
 # - ../kustomize/components/cymbal-branding
